--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -320,6 +320,42 @@ jobs:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
 
+      - name: 📦 Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: 🔍 Run npm audit for all services
+        run: |
+          mkdir -p security-reports
+          echo "# 🔒 Security Audit Report" > security-reports/npm-audit-summary.md
+          echo "" >> security-reports/npm-audit-summary.md
+          echo "**Generated:** $(date)" >> security-reports/npm-audit-summary.md
+          echo "" >> security-reports/npm-audit-summary.md
+          
+          for service in auth order restaurant payment-service notification-service admin-service food-delivery-server; do
+            echo "🔍 Running npm audit for $service..."
+            echo "## $service" >> security-reports/npm-audit-summary.md
+            cd $service
+            npm install --legacy-peer-deps --ignore-scripts 2>/dev/null || true
+            
+            # Run audit and capture output
+            npm audit --json > ../security-reports/npm-audit-$service.json 2>/dev/null || true
+            
+            # Extract vulnerabilities count
+            high=$(cat ../security-reports/npm-audit-$service.json | jq '.metadata.vulnerabilities.high // 0' 2>/dev/null || echo "0")
+            critical=$(cat ../security-reports/npm-audit-$service.json | jq '.metadata.vulnerabilities.critical // 0' 2>/dev/null || echo "0")
+            
+            if [ "$critical" != "0" ] || [ "$high" != "0" ]; then
+              echo "- ⚠️ Critical: $critical, High: $high" >> ../security-reports/npm-audit-summary.md
+            else
+              echo "- ✅ No critical/high vulnerabilities" >> ../security-reports/npm-audit-summary.md
+            fi
+            echo "" >> ../security-reports/npm-audit-summary.md
+            cd ..
+          done
+        continue-on-error: true
+
       - name: 🔒 Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
@@ -327,13 +363,76 @@ jobs:
           scan-ref: '.'
           format: 'sarif'
           output: 'trivy-results.sarif'
+          severity: 'CRITICAL,HIGH'
         continue-on-error: true
 
-      - name: 📊 Upload Trivy scan results
-        uses: github/codeql-action/upload-sarif@v4
+      - name: 🔒 Run Trivy JSON report
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'fs'
+          scan-ref: '.'
+          format: 'json'
+          output: 'security-reports/trivy-results.json'
+          severity: 'CRITICAL,HIGH,MEDIUM'
+        continue-on-error: true
+
+      - name: 📊 Upload Trivy scan results to GitHub Security
+        uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: 'trivy-results.sarif'
         continue-on-error: true
+
+      - name: 📊 Upload Security Reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: security-reports
+          path: security-reports/
+          retention-days: 30
+        if: always()
+
+      - name: 📝 Security Summary
+        run: |
+          echo "## 🔒 Security Scan Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          cat security-reports/npm-audit-summary.md >> $GITHUB_STEP_SUMMARY || true
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Trivy Scan" >> $GITHUB_STEP_SUMMARY
+          if [ -f "security-reports/trivy-results.json" ]; then
+            vuln_count=$(cat security-reports/trivy-results.json | jq '[.Results[]?.Vulnerabilities // [] | length] | add // 0' 2>/dev/null || echo "0")
+            echo "- Total vulnerabilities found: $vuln_count" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "- ✅ No vulnerabilities detected" >> $GITHUB_STEP_SUMMARY
+          fi
+        if: always()
+
+  # ========================================
+  # JOB 6b: CodeQL Analysis
+  # ========================================
+  codeql-analysis:
+    name: 🔬 CodeQL Security Analysis
+    runs-on: ubuntu-latest
+    needs: [lint]
+    permissions:
+      security-events: write
+      actions: read
+      contents: read
+    steps:
+      - name: 📥 Checkout code
+        uses: actions/checkout@v4
+
+      - name: 🔬 Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: javascript
+          queries: security-and-quality
+
+      - name: 🔬 Autobuild
+        uses: github/codeql-action/autobuild@v3
+
+      - name: 🔬 Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
+        with:
+          category: "/language:javascript"
 
   # ========================================
   # JOB 7: DEPLOY TO STAGING
