--- a/.env.example
+++ b/.env.example
@@ -15,10 +15,17 @@ MONGODB_URI_Admin=mongodb://localhost:27017/admin_db
 MONGODB_URI_Delivery=mongodb://localhost:27017/delivery_db
 
 # ============ JWT ============
+# SECURITY: Generate strong random keys (min 32 chars)
+# Use: openssl rand -base64 64
+JWT_SECRET=your-super-secret-jwt-key-here-min-32-chars
 JWT_ACCESS_SECRET=your-access-secret-key-here
 JWT_REFRESH_SECRET=your-refresh-secret-key-here
 JWT_ACCESS_EXPIRES_IN=15m
 JWT_REFRESH_EXPIRES_IN=7d
+
+# ============ CORS ============
+# SECURITY: Only allow specific origins (comma-separated)
+CORS_ORIGINS=http://localhost:3000,http://localhost:5173
 
 # ============ Services URLs ============
 AUTH_SERVICE_URL=http://localhost:5001
