--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,40 +1,93 @@
-# SonarQube Configuration for FastFood Delivery Platform
+# SonarCloud Configuration for FastFood Delivery Platform
+# Documentation: https://sonarcloud.io/documentation
 
-# Project identification
-sonar.projectKey=fastfood-delivery
+# ========================================
+# Project Identification
+# ========================================
+sonar.projectKey=HienHoang1101_cnpm_cicd
 sonar.projectName=FastFood Delivery Platform
 sonar.projectVersion=1.0.0
+sonar.organization=hienhoang1101
 
-# SonarQube Server (Local)
-sonar.host.url=http://localhost:9000
-
-# Source configuration
+# ========================================
+# Source Configuration
+# ========================================
 sonar.sources=auth,order,restaurant,payment-service,notification-service,admin-service,food-delivery-server
-sonar.tests=tests,auth/tests,order/tests,restaurant/tests,payment-service/tests,notification-service/tests,admin-service/tests,food-delivery-server/tests
+sonar.tests=tests
 
-# Language
+# Language & Encoding
 sonar.language=js
 sonar.sourceEncoding=UTF-8
 
+# ========================================
 # Exclusions
-sonar.exclusions=**/node_modules/**,**/coverage/**,**/dist/**,**/build/**,**/*.min.js,**/*.test.js,**/*.spec.js,**/tests/**
+# ========================================
+sonar.exclusions=\
+  **/node_modules/**,\
+  **/coverage/**,\
+  **/dist/**,\
+  **/build/**,\
+  **/*.min.js,\
+  **/tests/**,\
+  **/test/**,\
+  **/__tests__/**,\
+  **/client-delivery-app/**,\
+  **/foodapp-client/**,\
+  **/food-delivery-admin/**,\
+  **/food-delivery-restuarant-web/**
 
-# Test exclusions
 sonar.test.exclusions=**/node_modules/**
 
-# Coverage reports
-sonar.javascript.lcov.reportPaths=auth/coverage/lcov.info,order/coverage/lcov.info,restaurant/coverage/lcov.info,payment-service/coverage/lcov.info,notification-service/coverage/lcov.info,admin-service/coverage/lcov.info,food-delivery-server/coverage/lcov.info
+# ========================================
+# Coverage Reports (lcov format)
+# ========================================
+sonar.javascript.lcov.reportPaths=\
+  tests/coverage/lcov.info,\
+  auth/coverage/lcov.info,\
+  order/coverage/lcov.info,\
+  restaurant/coverage/lcov.info,\
+  payment-service/coverage/lcov.info,\
+  notification-service/coverage/lcov.info,\
+  admin-service/coverage/lcov.info
 
-# Test execution reports (JUnit format)
-sonar.testExecutionReportPaths=auth/reports/junit.xml,order/reports/junit.xml,restaurant/reports/junit.xml,payment-service/reports/junit.xml,notification-service/reports/junit.xml,admin-service/reports/junit.xml,food-delivery-server/reports/junit.xml
+# ========================================
+# Test Execution Reports (JUnit XML)
+# ========================================
+sonar.testExecutionReportPaths=\
+  tests/reports/junit.xml
 
-# Quality gates
+# ========================================
+# Quality Gate
+# ========================================
 sonar.qualitygate.wait=true
+sonar.qualitygate.timeout=300
 
-# Duplications
+# ========================================
+# Duplication Detection
+# ========================================
 sonar.cpd.exclusions=**/tests/**,**/*.test.js,**/*.spec.js
 
-# Issue severity
-sonar.issue.ignore.multicriteria=e1
+# ========================================
+# Issue Management
+# ========================================
+# Ignore unused variable warnings in test files
+sonar.issue.ignore.multicriteria=e1,e2
 sonar.issue.ignore.multicriteria.e1.ruleKey=javascript:S1481
 sonar.issue.ignore.multicriteria.e1.resourceKey=**/*.test.js
+sonar.issue.ignore.multicriteria.e2.ruleKey=javascript:S1481
+sonar.issue.ignore.multicriteria.e2.resourceKey=**/*.spec.js
+
+# ========================================
+# Analysis Scope
+# ========================================
+sonar.coverage.exclusions=\
+  **/tests/**,\
+  **/*.test.js,\
+  **/*.spec.js,\
+  **/index.js,\
+  **/config/**
+
+# ========================================
+# Security Hotspots
+# ========================================
+sonar.security.hotspots.inheritedRules=true
